--- a/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
@@ -65,6 +65,6 @@ spec:
             kind: ClusterRole
             name: cluster-admin
           subjects:
-            - identifier: system-upgrade-controller
+            - identifier: *app
     serviceAccount:
       system-upgrade-controller: {}
