--- a/.renovate/packageRules.json5
+++ b/.renovate/packageRules.json5
@@ -21,6 +21,12 @@
       versioning: "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z$",
     },
     {
+      description: "Disable new MinIO releases",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["**/minio/minio"],
+      enabled: false
+    },
+    {
       description: "Loose versioning for non-semver packages",
       matchDatasources: ["docker"],
       matchPackageNames: ["**/searxng/"],
