chore(dragonfly): modify gatus config

--- a/kubernetes/apps/database/dragonfly/cluster/gatus.yaml
+++ b/kubernetes/apps/database/dragonfly/cluster/gatus.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   config.yaml: |
     endpoints:
-      - name: redis
+      - name: dragonfly
         group: infrastructure
         url: tcp://dragonfly.database.svc.cluster.local:6379
         interval: 1m
