--- a/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
@@ -5,7 +5,24 @@ metadata:
   name: &dbcluster cluster-pg17
   annotations:
     lbipam.cilium.io/ips: ${SVC_POSTGRES_IP}
-    external-dns.alpha.kubernetes.io/hostname: cluster-pg17.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_DOMAIN}
+spec:
+  type: LoadBalancer
+  ports:
+    - name: postgres
+      port: &port 5432
+      protocol: TCP
+      targetPort: *port
+  selector:
+    cnpg.io/cluster: *dbcluster
+    cnpg.io/instanceRole: primary
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: &dbcluster immich-pg17
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: immich-pg17.${SECRET_DOMAIN}
 spec:
   type: LoadBalancer
   ports:
