--- a/kubernetes/components/common/substitutions/cluster-settings.yaml
+++ b/kubernetes/components/common/substitutions/cluster-settings.yaml
@@ -31,9 +31,8 @@ data:
   SVC_NGINX_INTERNAL_IP: "192.168.20.40"
   SVC_NGINX_EXTERNAL_IP: "192.168.20.41"
   SVC_POSTGRES_IP: "192.168.20.50"
-  SVC_DRAGONFLY_IP: "192.168.20.51"
+  SVC_VECTORDB_IP: "192.168.20.51"
   SVC_LOKI_IP: "192.168.20.52"
-  SVC_QBITTORRENT_IP: "192.168.20.60"
-  SVC_JELLYFIN_IP: "192.168.20.62"
+  SVC_DRAGONFLY_IP: "192.168.20.53"
   # Service Ports
   SVC_QBITTORRENT_PORT: "60112"
