--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
         containers:
           dokuwiki:
             image:
-              repository: docker.io/dokuwiki/dokuwiki
+              repository: ghcr.io/dokuwiki/dokuwiki
               tag: stable
             env:
               PHP_TIMEZONE: ${CONFIG_TIMEZONE}
