chore(dokuwiki): change tag to oldstable

--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
           dokuwiki:
             image:
               repository: ghcr.io/dokuwiki/dokuwiki
-              tag: stable
+              tag: oldstable
             env:
               PHP_TIMEZONE: ${CONFIG_TIMEZONE}
             probes:
