Revert "chore(dokuwiki): change tag to oldstable"
This reverts commit cb5730a61c3d8b4bbe2f237f58931757de67f0d2.

--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
           dokuwiki:
             image:
               repository: ghcr.io/dokuwiki/dokuwiki
-              tag: oldstable
+              tag: stable
             env:
               PHP_TIMEZONE: ${CONFIG_TIMEZONE}
             probes:
