Revert "chore(dokuwiki): change to github package registry"
This reverts commit e05cb93597724fde3c9dfcbcaab20681d0062137.

--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
         containers:
           dokuwiki:
             image:
-              repository: ghcr.io/dokuwiki/dokuwiki
+              repository: docker.io/dokuwiki/dokuwiki
               tag: stable
             env:
               PHP_TIMEZONE: ${CONFIG_TIMEZONE}
