fix(tailscale-operator): remove hostNetwork & add exitNode

--- a/kubernetes/apps/network/tailscale-operator/connector/connector.yaml
+++ b/kubernetes/apps/network/tailscale-operator/connector/connector.yaml
@@ -4,6 +4,7 @@ kind: Connector
 metadata:
   name: subnet-router
 spec:
+  exitNode: true
   hostname: home-k8s-router
   subnetRouter:
     advertiseRoutes:
