--- a/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
@@ -45,7 +45,13 @@ spec:
         secretName: *app
     operatorConfig:
       defaultTags:
-        - "tag:k8s"
+        - "tag:k8s-operator"
       hostname: *app
       podAnnotations:
         secret.reloader.stakater.com/reload: *app
+      proxyConfig:
+        defaultTags: "tag:k8s"
+      tolerations:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
+          effect: NoSchedule
