--- a/kubernetes/apps/network/tailscale-operator/connector/proxyclass.yaml
+++ b/kubernetes/apps/network/tailscale-operator/connector/proxyclass.yaml
@@ -9,7 +9,7 @@ spec:
       tailscaleContainer:
         resources:
           limits:
-            kernel.org/tun: 1
+            squat.ai/tun: "1"
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
