--- a/kubernetes/apps/network/tailscale-operator/connector/connector.yaml
+++ b/kubernetes/apps/network/tailscale-operator/connector/connector.yaml
@@ -5,7 +5,7 @@ metadata:
   name: subnet-router
 spec:
   hostname: home-k8s-router
-  proxyClass: kernel-org-tun
+  proxyClass: tailscale-tun
   subnetRouter:
     advertiseRoutes:
       - 192.168.1.1/32
