--- a/kubernetes/apps/security/authentik/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authentik/app/helmrelease.yaml
@@ -34,9 +34,6 @@ spec:
     global:
       deploymentAnnotations:
         secret.reloader.stakater.com/reload: *app
-      env:
-        - name: AUTHENTIK_SESSION_STORAGE
-          value: db
       envFrom:
         - secretRef:
             name: *app
@@ -45,6 +42,8 @@ spec:
       error_reporting:
         enabled: false
         send_pii: false
+      worker:
+        concurrency: 4
     server:
       replicas: 1
       initContainers:
@@ -65,7 +64,7 @@ spec:
             - *host
             - *ssoHost
             - *idHost
-            secretName: ${SECRET_DOMAIN/./-}-production-tlsf
+            secretName: ${SECRET_DOMAIN/./-}-production-tls
       metrics:
         enabled: true
         serviceMonitor:
