--- a/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
@@ -90,12 +90,12 @@ spec:
           name: nas-icmp
           url: nas.${SECRET_DOMAIN}
         # PiKVM
-        - module: http_2xx
-          name: pikvm-http
-          url: "https://pikvm.${SECRET_DOMAIN}"
-        - module: icmp
-          name: pikvm-icmp
-          url: pikvm.${SECRET_DOMAIN}
+        # - module: http_2xx
+        #   name: pikvm-http
+        #   url: "https://pikvm.${SECRET_DOMAIN}"
+        # - module: icmp
+        #   name: pikvm-icmp
+        #   url: pikvm.${SECRET_DOMAIN}
         # ProxmoxVE
         - module: http_2xx
           name: pve-http
