--- a/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
@@ -23,7 +23,7 @@ spec:
   staticConfigs:
     - targets:
         - nas.${SECRET_DOMAIN}:9100
-        - pikvm.${SECRET_DOMAIN}:9100
+        # - pikvm.${SECRET_DOMAIN}:9100
         - pve.${SECRET_DOMAIN}:9100
   metricsPath: /metrics
   relabelings:
