--- a/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
@@ -36,6 +36,7 @@ spec:
               DISABLE_NEW_RELEASE_CHECK: true
               DISABLE_SIGNUPS: true
               INFERENCE_CONTEXT_LENGTH: 4096
+              INFERENCE_ENABLE_AUTO_SUMMARIZATION: true
               MEILI_ADDR: http://karakeep-meilisearch.self-hosted.svc.cluster.local:7700
               NEXTAUTH_URL: "https://{{ .Release.Name }}.${SECRET_DOMAIN}"
               OCR_LANGS: eng,swe
