--- a/talos/patches/global/machine-sysctl.yaml
+++ b/talos/patches/global/machine-sysctl.yaml
@@ -11,3 +11,5 @@ machine:
     net.ipv4.tcp_rmem: 4096 87380 33554432 # 10Gb/s
     net.ipv4.tcp_wmem: 4096 65536 33554432 # 10Gb/s
     net.ipv4.tcp_window_scaling: 1         # 10Gb/s
+    sunrpc.tcp_slot_table_entries: 128     # 10Gb/s | NFS
+    sunrpc.tcp_max_slot_table_entries: 128 # 10Gb/s | NFS
