chore(talos): add user namespaces

--- a/talos/patches/global/machine-sysctl.yaml
+++ b/talos/patches/global/machine-sysctl.yaml
@@ -13,3 +13,4 @@ machine:
     net.ipv4.tcp_window_scaling: 1         # 10Gb/s
     sunrpc.tcp_slot_table_entries: 128     # 10Gb/s | NFS
     sunrpc.tcp_max_slot_table_entries: 128 # 10Gb/s | NFS
+    user.max_user_namespaces: 11255        # User namespaces
