chore(talos): add init_on_alloc & init_on_free

--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -147,6 +147,8 @@ nodes:
       customization:
         extraKernelArgs:
           - net.ifnames=0           # Legacy NIC names.
+          - -init_on_alloc          # Less security, more performance.
+          - -init_on_free           # Less security, more performance.
           - -selinux                # Less security, more performance.
           - apparmor=0              # Less security, more performance.
           - init_on_alloc=0         # Less security, more performance.
