chore(talos): add init_on_alloc & init_on_free

--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -182,6 +182,8 @@ controlPlane:
     customization:
       extraKernelArgs:
         - net.ifnames=0           # Legacy NIC names.
+        - -init_on_alloc          # Less security, more performance.
+        - -init_on_free           # Less security, more performance.
         - -selinux                # Less security, more performance.
         - apparmor=0              # Less security, more performance.
         - init_on_alloc=0         # Less security, more performance.
