--- a/kubernetes/apps/storage/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/openebs/app/helmrelease.yaml
@@ -77,3 +77,9 @@ spec:
       replicated:
         mayastor:
           enabled: false
+    loki:
+      enabled: false
+    alloy:
+      enabled: false
+    minio:
+      enabled: false
