--- a/kubernetes/apps/media/lidarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/lidarr/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
               LIDARR__AUTH__METHOD: External
               LIDARR__AUTH__REQUIRED: DisabledForLocalAddresses
               LIDARR__LOG__DBENABLED: "False"
-              LIDARR__LOG__LEVEL: info
+              LIDARR__LOG__LEVEL: debug
               LIDARR__SERVER__PORT: &port 80
               LIDARR__UPDATE__BRANCH: develop
             envFrom: *envFrom
