--- a/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
@@ -50,8 +50,8 @@ spec:
     config:
       pluginsDir: /build/plugins
     ingress:
-      annotations:
-        nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
+      # annotations:
+      #   nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
       enabled: true
       ingressClassName: internal
       hosts:
