chore: temp disable nginx ingress whitelist

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -43,8 +43,8 @@ spec:
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
       ingress:
-        annotations:
-          nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
+        # annotations:
+        #   nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
         enabled: true
         ingressClassName: internal
         hosts:
@@ -147,8 +147,8 @@ spec:
             memory: 64Mi
     prometheus:
       ingress:
-        annotations:
-          nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
+        # annotations:
+        #   nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
         enabled: true
         ingressClassName: internal
         hosts:
