--- a/kubernetes/apps/observability/silence-operator/silences/silence.yaml
+++ b/kubernetes/apps/observability/silence-operator/silences/silence.yaml
@@ -1,6 +1,6 @@
 ---
-# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.giantswarm.io/silence_v1alpha1.json
-apiVersion: monitoring.giantswarm.io/v1alpha1
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.giantswarm.io/silence_v1alpha2.json
+apiVersion: observability.giantswarm.io/v1alpha2
 kind: Silence
 metadata:
   name: pve-memory-high-utilization
@@ -9,13 +9,11 @@ spec:
   matchers:
     - name: alertname
       value: NodeMemoryHighUtilization
-      isRegex: false
     - name: instance
       value: pve.*
-      isRegex: true
 ---
-# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.giantswarm.io/silence_v1alpha1.json
-apiVersion: monitoring.giantswarm.io/v1alpha1
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.giantswarm.io/silence_v1alpha2.json
+apiVersion: observability.giantswarm.io/v1alpha2
 kind: Silence
 metadata:
   name: nas-memory-high-utilization
@@ -24,7 +22,5 @@ spec:
   matchers:
     - name: alertname
       value: NodeMemoryHighUtilization
-      isRegex: false
     - name: instance
       value: nas.*
-      isRegex: true
