--- a/kubernetes/apps/observability/silence-operator/silences/silence.yaml
+++ b/kubernetes/apps/observability/silence-operator/silences/silence.yaml
@@ -11,6 +11,7 @@ spec:
       value: NodeMemoryHighUtilization
     - name: instance
       value: pve.*
+      matchType: "=~"
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.giantswarm.io/silence_v1alpha2.json
 apiVersion: observability.giantswarm.io/v1alpha2
@@ -24,3 +25,4 @@ spec:
       value: NodeMemoryHighUtilization
     - name: instance
       value: nas.*
+      matchType: "=~"
