--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -61,6 +61,7 @@ spec:
           "request_length": $request_length, "duration": $request_time, "method": "$request_method", "http_referrer": "$http_referer",
           "http_user_agent": "$http_user_agent"}
         proxy-body-size: 0
+        proxy-busy-buffers-size: 16k
         proxy-buffer-size: 16k
         proxy-read-timeout: 120
         proxy-send-timeout: 120
