--- a/kubernetes/apps/storage/volsync/app/mutatingadmissionpolicy.yaml
+++ b/kubernetes/apps/storage/volsync/app/mutatingadmissionpolicy.yaml
@@ -30,7 +30,7 @@ spec:
   failurePolicy: Fail
   reinvocationPolicy: IfNeeded
   mutations:
-    - patchType: "JSONPatch"
+    - patchType: JSONPatch
       jsonPatch:
         expression: >
           [
@@ -40,11 +40,11 @@ spec:
             },
             JSONPatch{
               op: "add", path: "/spec/template/spec/initContainers/-",
-              value: Object.spec.initContainers{
+              value: Object.spec.template.spec.initContainers{
                 name: "jitter",
-                image: "docker.io/library/busybox:latest",
+                image: "ghcr.io/home-operations/busybox:1.37.0@sha256:026ed7273270ec08f6902b4ae8334c23b473e5394bec3bbbdbfe580c710d50bc",
                 imagePullPolicy: "IfNotPresent",
-                command: ["sh", "-c", "sleep $(shuf -i 0-60 -n 1)"]
+                command: ["sh", "-c", "sleep $(shuf -i 0-90 -n 1)"]
               }
             }
           ]
