--- a/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
@@ -82,7 +82,7 @@ spec:
           release: prometheus
         scrapeTimeout: 30s
       targets:
-        # TrueNAS
+        # TrueNAS SCALE
         - module: http_2xx
           name: nas-http
           url: "https://nas.${SECRET_DOMAIN}"
@@ -96,7 +96,7 @@ spec:
         # - module: icmp
         #   name: pikvm-icmp
         #   url: pikvm.${SECRET_DOMAIN}
-        # ProxmoxVE
+        # Proxmox VE host
         - module: http_2xx
           name: pve-http
           url: "https://pve.${SECRET_DOMAIN}:8006"
@@ -109,7 +109,7 @@ spec:
         - module: icmp
           name: pve-ipmi-icmp
           url: pve-ipmi.${SECRET_DOMAIN}
-        # UniFi Controller
+        # UniFi Cloud Gateway Fiber
         - module: http_2xx
           name: unifi-http
           url: "https://unifi.${SECRET_DOMAIN}"
