--- a/kubernetes/apps/observability/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/loki/app/helmrelease.yaml
@@ -129,6 +129,7 @@ spec:
       image:
         repository: ghcr.io/home-operations/k8s-sidecar
         tag: 1.30.7@sha256:3b6444d91c6e69a9e07c5e55419452d967d18c833d88b36277dc2021b708f621
+      enableUniqueFilenames: true
       resources:
         requests:
           cpu: 10m
@@ -137,3 +138,4 @@ spec:
           memory: 192Mi
       rules:
         searchNamespace: ALL
+        folder: /rules/fake
