--- a/kubernetes/apps/observability/kube-prometheus-stack/app/resources/kube-state-metrics.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/resources/kube-state-metrics.yaml
@@ -154,7 +154,7 @@ kube-state-metrics:
                   chart_version: [ spec, version ]
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
-              version: v1beta2
+              version: v1
               kind: OCIRepository
             metricNamePrefix: gotk
             metrics:
@@ -223,7 +223,7 @@ kube-state-metrics:
                   webhook_path: [ status, webhookPath ]
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
-              version: v1beta2
+              version: v1
               kind: ImageRepository
             metricNamePrefix: gotk
             metrics:
@@ -241,7 +241,7 @@ kube-state-metrics:
                   image: [ spec, image ]
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
-              version: v1beta2
+              version: v1
               kind: ImagePolicy
             metricNamePrefix: gotk
             metrics:
@@ -259,7 +259,7 @@ kube-state-metrics:
                   source_name: [ spec, imageRepositoryRef, name ]
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
-              version: v1beta2
+              version: v1
               kind: ImageUpdateAutomation
             metricNamePrefix: gotk
             metrics:
