--- a/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
                 custom: true
                 spec:
                   httpGet:
-                    path: /
+                    path: /healthz
                     port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
