--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -158,26 +158,27 @@ spec:
           - hosts:
               - *host
       prometheusSpec:
-        enableAdminAPI: true
-        enableFeatures:
-          - auto-gomemlimit
-          # https://prometheus.io/docs/prometheus/latest/feature_flags/
-          - memory-snapshot-on-shutdown
-          - new-service-discovery-manager
-        ruleSelectorNilUsesHelmValues: false
-        serviceMonitorSelectorNilUsesHelmValues: false
+        image:
+          registry: docker.io
+          repository: prompp/prompp
+          tag: 2.53.2-0.3.4
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 64535
+          runAsGroup: 64535
+          fsGroup: 64535
         podMonitorSelectorNilUsesHelmValues: false
         probeSelectorNilUsesHelmValues: false
+        ruleSelectorNilUsesHelmValues: false
         scrapeConfigSelectorNilUsesHelmValues: false
+        serviceMonitorSelectorNilUsesHelmValues: false
         retention: 14d
-        retentionSize: 90GB
-        walCompression: true
+        retentionSize: 50GB
         resources:
           requests:
-            cpu: 300m
-            memory: 1536Mi
+            cpu: 100m
           limits:
-            memory: 2Gi
+            memory: 2000Mi
         storageSpec:
           volumeClaimTemplate:
             metadata:
@@ -186,4 +187,4 @@ spec:
               storageClassName: truenas-ssd-iscsi
               resources:
                 requests:
-                  storage: 100Gi
+                  storage: 50Gi
