--- a/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
@@ -15,6 +15,7 @@ spec:
         ## Karakeep
         MEILI_MASTER_KEY: "{{ .MEILI_MASTER_KEY }}"
         NEXTAUTH_SECRET: "{{ .NEXTAUTH_SECRET }}"
+        PROMETHEUS_AUTH_TOKEN: "{{ .PROMETHEUS_AUTH_TOKEN }}"
         ## OpenAI
         OPENAI_API_KEY: "{{ .OPENAI_API_KEY_KARAKEEP }}"
   dataFrom:
