--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -36,12 +36,14 @@ spec:
               tag: 3.10.3@sha256:f28660570b57a7032bc752724bebbc86828916211356b1d6110e03b139b807cf
             env:
               TZ: ${CONFIG_TIMEZONE}
+              HASHEOUS_API_ENABLED: true
+              PLAYMATCH_API_ENABLED: true
+              # Used for Tinfoil Integration. For more information, see https://docs.romm.app/latest/Integrations/Tinfoil-integration/?h=disable_download_endpoint_auth
               DISABLE_DOWNLOAD_ENDPOINT_AUTH: true
-              DISABLE_USERPASS_LOGIN: false # Only set to true after first run and admin has been created.
+              # Only set to true after first run and admin has been created.
+              DISABLE_USERPASS_LOGIN: false
               ENABLE_SCHEDULED_RESCAN: true
               SCHEDULED_RESCAN_CRON: "0 2 * * *"
-              ENABLE_SCHEDULED_UPDATE_MAME_XML: true
-              SCHEDULED_UPDATE_MAME_XML_CRON: "0 3 * * *"
               ENABLE_RESCAN_ON_FILESYSTEM_CHANGE: true
               RESCAN_ON_FILESYSTEM_CHANGE_DELAY: 5
               ROMM_DB_DRIVER: postgresql
