--- a/kubernetes/apps/media/navidrome/app/helmrelease.yaml
+++ b/kubernetes/apps/media/navidrome/app/helmrelease.yaml
@@ -33,15 +33,15 @@ spec:
               ND_CACHEFOLDER: /data/cache
               ND_MUSICFOLDER: /music
               ND_AUTOIMPORTPLAYLISTS: false
-              ND_ARTISTARTPRIORITY: 'folder.*, external'
-              ND_COVERARTPRIORITY: 'folder.*, cover.*, embedded, external'
-              ND_SCANSCHEDULE: '@every 1h'
-              ND_SESSIONTIMEOUT: '72h'
-              ND_IMAGECACHESIZE: '512MB'
-              ND_TRANSCODINGCACHESIZE: '512MB'
+              ND_ARTISTARTPRIORITY: "folder.*, external"
+              ND_COVERARTPRIORITY: "folder.*, cover.*, embedded, external"
+              ND_SCANNER_SCHEDULE: 0 * * * *
+              ND_SCANNER_PURGEMISSING: always
+              ND_IMAGECACHESIZE: "512MB"
+              ND_TRANSCODINGCACHESIZE: "512MB"
               ND_ENABLEINSIGHTSCOLLECTOR: false
               ND_PROMETHEUS_ENABLED: true
-              ND_DEFAULTTHEME: 'Spotify-ish'
+              ND_DEFAULTTHEME: "Spotify-ish"
               ND_REVERSEPROXYUSERHEADER: x-authentik-username
               ND_REVERSEPROXYWHITELIST: ${CLUSTER_POD_CIDR}
             probes:
