chore(immich): pass secrets to immich config file & enable smtp

--- a/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
@@ -3,6 +3,29 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
+  name: &name immich-config
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    name: *name
+    template:
+      templateFrom:
+        - configMap:
+            name: immich-config-tpl
+            items:
+              - key: immich.json
+  dataFrom:
+    - extract:
+        key: immich
+    - extract:
+        key: smtp
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
   name: &name immich
 spec:
   secretStoreRef:
