--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -195,7 +195,7 @@ spec:
         globalMounts:
           - path: /cache
       config:
-        type: configMap
+        type: secret
         name: immich-config
         globalMounts:
           - path: /config/immich.json
