--- a/kubernetes/apps/self-hosted/immich/app/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/kustomization.yaml
@@ -6,8 +6,10 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: immich-config
+  - name: immich-config-tpl
     files:
       - immich.json=./resources/config.json
+configurations:
+  - ./kustomizeconfig.yaml
 generatorOptions:
   disableNameSuffixHash: true
