--- a/kubernetes/apps/self-hosted/immich/app/resources/config.json
+++ b/kubernetes/apps/self-hosted/immich/app/resources/config.json
@@ -122,7 +122,7 @@
   "storageTemplate": {
     "enabled": true,
     "hashVerificationEnabled": true,
-    "template": "{{y}}/{{y}}-{{MM}}-{{dd}}/{{filename}}"
+    "template": "{{`{{y}}/{{y}}-{{MM}}-{{dd}}/{{filename}}`}}"
   },
   "image": {
     "thumbnail": {
