--- a/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
@@ -98,8 +98,8 @@ spec:
               capabilities: { drop: ["ALL"] }
           meilisearch:
             image:
-              repository: getmeili/meilisearch
-              tag: v1.17.1@sha256:a5d47e065e63da1a8a3c9691c60cb1ca10c8d1c3113c9e58427dbba1373ac5e9
+              repository: docker.io/getmeili/meilisearch
+              tag: v1.13.3@sha256:c4d6ab59c18d7b3636e82af862c31861ccf8afb3e9c14dddf9d3e868840667cd
             args:
               - /bin/meilisearch
               - --experimental-dumpless-upgrade
