chore(cnpg): rename pg17 cluster

--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - ./cluster-pg17.yaml
   - ./gatus.yaml
   - ./immich-pg17.yaml
+  - ./pg17-cluster.yaml
   - ./scheduledbackup.yaml
   - ./service.yaml
