--- a/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
@@ -34,3 +34,21 @@ spec:
   selector:
     cnpg.io/cluster: *dbcluster
     cnpg.io/instanceRole: primary
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: &dbcluster pg17-cluster
+  # annotations:
+  #   lbipam.cilium.io/ips: ${SVC_POSTGRES_IP}
+  #   external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_DOMAIN}
+spec:
+  type: LoadBalancer
+  ports:
+    - name: postgres
+      port: &port 5432
+      protocol: TCP
+      targetPort: *port
+  selector:
+    cnpg.io/cluster: *dbcluster
+    cnpg.io/instanceRole: primary
