--- a/kubernetes/apps/database/cloudnative-pg/cluster/gatus.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/gatus.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cluster-pg17-gatus-ep
+  name: pg17-cluster-gatus-ep
   labels:
     gatus.io/enabled: "true"
 data:
@@ -10,7 +10,7 @@ data:
     endpoints:
       - name: postgres
         group: infrastructure
-        url: tcp://cluster-pg17-rw.database.svc.cluster.local:5432
+        url: tcp://pg17-cluster-rw.database.svc.cluster.local:5432
         interval: 1m
         conditions:
           - "[CONNECTED] == true"
@@ -21,7 +21,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: immich-pg17-gatus-ep
+  name: pg17-immich-gatus-ep
   labels:
     gatus.io/enabled: "true"
 data:
@@ -29,7 +29,7 @@ data:
     endpoints:
       - name: vectordb
         group: infrastructure
-        url: tcp://immich-pg17-rw.database.svc.cluster.local:5432
+        url: tcp://pg17-immich-rw.database.svc.cluster.local:5432
         interval: 1m
         conditions:
           - "[CONNECTED] == true"
