chore: rename cnpg clusters

--- a/kubernetes/apps/media/jellystat/app/externalsecret.yaml
+++ b/kubernetes/apps/media/jellystat/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       data:
         ## Jellystat
         JWT_SECRET: "{{ .JELLYSTAT_JWT_SECRET }}"
-        POSTGRES_IP: &dbHost cluster-pg17-rw.database.svc.cluster.local
+        POSTGRES_IP: &dbHost pg17-cluster-rw.database.svc.cluster.local
         POSTGRES_PORT: "5432"
         POSTGRES_DB: &dbName jfstat
         POSTGRES_USER: &dbUser "{{ .JELLYSTAT_POSTGRES_USER }}"
