--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       data:
         ## Grafana
         GF_DATABASE_TYPE: postgres
-        GF_DATABASE_HOST: &dbHost cluster-pg17-rw.database.svc.cluster.local
+        GF_DATABASE_HOST: &dbHost pg17-cluster-rw.database.svc.cluster.local
         GF_DATABASE_NAME: &dbName grafana
         GF_DATABASE_USER: &dbUser "{{ .GRAFANA_POSTGRES_USER }}"
         GF_DATABASE_PASSWORD: &dbPass "{{ .GRAFANA_POSTGRES_PASSWORD }}"
