--- a/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
@@ -36,7 +36,7 @@ spec:
     template:
       data:
         ## Immich
-        DB_HOSTNAME: immich-pg17-rw.database.svc.cluster.local
+        DB_HOSTNAME: pg17-immich-rw.database.svc.cluster.local
         DB_DATABASE_NAME: immich
         DB_USERNAME: "{{ .IMMICH_POSTGRES_USER }}"
         DB_PASSWORD: "{{ .IMMICH_POSTGRES_PASSWORD }}"
