--- a/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
+++ b/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
@@ -15,9 +15,9 @@ spec:
       data:
         ## Atuin
         ATUIN_DB_URI: |-
-          postgres://{{ .ATUIN_POSTGRES_USER }}:{{ .ATUIN_POSTGRES_PASSWORD }}@cluster-pg17-rw.database.svc.cluster.local/atuin
+          postgres://{{ .ATUIN_POSTGRES_USER }}:{{ .ATUIN_POSTGRES_PASSWORD }}@pg17-cluster-rw.database.svc.cluster.local/atuin
         ## Postgres Init
-        INIT_POSTGRES_HOST: cluster-pg17-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: pg17-cluster-rw.database.svc.cluster.local
         INIT_POSTGRES_DBNAME: atuin
         INIT_POSTGRES_USER: "{{ .ATUIN_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .ATUIN_POSTGRES_PASSWORD }}"
