--- a/kubernetes/apps/media/radarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/radarr/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       data:
         ## Radarr
         RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
-        RADARR__POSTGRES__HOST: &dbHost cluster-pg17-rw.database.svc.cluster.local
+        RADARR__POSTGRES__HOST: &dbHost pg17-cluster-rw.database.svc.cluster.local
         RADARR__POSTGRES__PORT: "5432"
         RADARR__POSTGRES__USER: &dbUser "{{ .RADARR_POSTGRES_USER }}"
         RADARR__POSTGRES__PASSWORD: &dbPass "{{ .RADARR_POSTGRES_PASSWORD }}"
