--- a/kubernetes/apps/media/sonarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/sonarr/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       data:
         ## Sonarr
         SONARR__AUTH__APIKEY: "{{ .SONARR_API_KEY }}"
-        SONARR__POSTGRES__HOST: &dbHost cluster-pg17-rw.database.svc.cluster.local
+        SONARR__POSTGRES__HOST: &dbHost pg17-cluster-rw.database.svc.cluster.local
         SONARR__POSTGRES__PORT: "5432"
         SONARR__POSTGRES__USER: &dbUser "{{ .SONARR_POSTGRES_USER }}"
         SONARR__POSTGRES__PASSWORD: &dbPass "{{ .SONARR_POSTGRES_PASSWORD }}"
