--- a/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
         NEXTCLOUD_ADMIN_USER: "{{ .NEXTCLOUD_ADMIN_USER }}"
         NEXTCLOUD_ADMIN_PASSWORD: "{{ .NEXTCLOUD_ADMIN_PASSWORD }}"
         NEXTCLOUD_METRICS_TOKEN: "{{ .NEXTCLOUD_METRICS_TOKEN }}"
-        POSTGRES_HOST: &dbHost cluster-pg17-rw.database.svc.cluster.local
+        POSTGRES_HOST: &dbHost pg17-cluster-rw.database.svc.cluster.local
         POSTGRES_DB: &dbName nextcloud
         POSTGRES_USER: &dbUser "{{ .NEXTCLOUD_POSTGRES_USER }}"
         POSTGRES_PASSWORD: &dbPass "{{ .NEXTCLOUD_POSTGRES_PASSWORD }}"
