--- a/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
@@ -11,23 +11,16 @@ spec:
   target:
     name: *name
     template:
+      data:
+        username: "{{ .POSTGRES_SUPER_USER }}"
+        password: "{{ .POSTGRES_SUPER_PASSWORD }}"
+        S3_ACCESS_KEY_ID: "{{ .S3_ACCESS_KEY }}"
+        S3_SECRET_ACCESS_KEY: "{{ .S3_SECRET_KEY }}"
       metadata:
         labels:
           cnpg.io/reload: "true"
-  data:
-    - secretKey: username
-      remoteRef:
+  dataFrom:
+    - extract:
         key: cloudnative-pg
-        property: POSTGRES_SUPER_USER
-    - secretKey: password
-      remoteRef:
-        key: cloudnative-pg
-        property: POSTGRES_SUPER_PASS
-    - secretKey: s3-access-key
-      remoteRef:
+    - extract:
         key: minio
-        property: S3_ACCESS_KEY
-    - secretKey: s3-secret-key
-      remoteRef:
-        key: minio
-        property: S3_SECRET_KEY
