--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -3,8 +3,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./externalsecret.yaml
   # - ./gatus.yaml
+  - ./objectstore.yaml
   - ./pg17-cluster.yaml
   - ./pg17-immich.yaml
+  - ./prometheusrule.yaml
   - ./scheduledbackup.yaml
   - ./service.yaml
