--- a/kubernetes/apps/database/cloudnative-pg/cluster/scheduledbackup.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/scheduledbackup.yaml
@@ -5,11 +5,14 @@ kind: ScheduledBackup
 metadata:
   name: &cluster pg17-cluster
 spec:
-  schedule: "@daily"
-  immediate: true
   backupOwnerReference: self
   cluster:
     name: *cluster
+  immediate: true
+  method: plugin
+  pluginConfiguration:
+    name: barman-cloud.cloudnative-pg.io
+  schedule: "@daily"
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/postgresql.cnpg.io/scheduledbackup_v1.json
 apiVersion: postgresql.cnpg.io/v1
@@ -17,8 +20,11 @@ kind: ScheduledBackup
 metadata:
   name: &cluster pg17-immich
 spec:
-  schedule: "@daily"
-  immediate: true
   backupOwnerReference: self
   cluster:
     name: *cluster
+  immediate: true
+  method: plugin
+  pluginConfiguration:
+    name: barman-cloud.cloudnative-pg.io
+  schedule: "@daily"
