--- a/kubernetes/apps/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/ks.yaml
@@ -9,20 +9,39 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: democratic-csi-iscsi
-      namespace: storage
-    - name: minio
-      namespace: storage
-    - name: onepassword
-      namespace: security
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v2
-      kind: HelmRelease
-      name: *app
-      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/database/cloudnative-pg/app
+  prune: true
+  retryInterval: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
+  wait: true
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app cloudnative-pg-barman-cloud
+  namespace: &namespace database
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  dependsOn:
+    - name: cert-manager
+      namespace: security
+    - name: cloudnative-pg
+      namespace: *namespace
+  interval: 1h
+  path: ./kubernetes/apps/database/cloudnative-pg/barman-cloud
+  postBuild:
+    substitute:
+      # renovate: datasource=docker depName=ghcr.io/cloudnative-pg/plugin-barman-cloud-sidecar
+      SIDECAR_IMAGE_VERSION: v0.5.0
   prune: true
   retryInterval: 2m
   sourceRef:
@@ -46,6 +65,12 @@ spec:
   dependsOn:
     - name: cloudnative-pg
       namespace: *namespace
+    - name: cloudnative-pg-barman-cloud
+      namespace: *namespace
+    - name: democratic-csi-iscsi
+      namespace: storage
+    - name: onepassword
+      namespace: security
   healthCheckExprs:
     - apiVersion: postgresql.cnpg.io/v1
       kind: Cluster
