chore: update ExternalSecret

--- a/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
+++ b/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
         INIT_POSTGRES_DBNAME: openwebui
         INIT_POSTGRES_USER: "{{ .OPENWEBUI_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .OPENWEBUI_POSTGRES_PASSWORD }}"
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASSWORD }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
