--- a/kubernetes/apps/database/postgres-backup/app/externalsecret.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         POSTGRES_USER: "{{ .POSTGRES_SUPER_USER }}"
-        POSTGRES_PASSWORD: "{{ .POSTGRES_SUPER_PASSWORD }}"
+        POSTGRES_PASSWORD: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
