--- a/kubernetes/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/gatus/app/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
         INIT_POSTGRES_DBNAME: gatus
         INIT_POSTGRES_USER: "{{ .GATUS_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .GATUS_POSTGRES_PASSWORD }}"
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASSWORD }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
