--- a/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
+++ b/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
@@ -21,7 +21,7 @@ spec:
         INIT_POSTGRES_DBNAME: atuin
         INIT_POSTGRES_USER: "{{ .ATUIN_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .ATUIN_POSTGRES_PASSWORD }}"
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASSWORD }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: atuin
