chore(cnpg): modify annotations

--- a/kubernetes/apps/database/cloudnative-pg/cluster/pg17-cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/pg17-cluster.yaml
@@ -5,7 +5,7 @@ kind: Cluster
 metadata:
   name: pg17-cluster
   annotations:
-    cnpg.io/skipEmptyWalArchiveCheck: "enabled"
+    cnpg.io/skipEmptyWalArchiveCheck: enabled
 spec:
   enableSuperuserAccess: true
   instances: 3
