chore(cnpg): re-deploy pg17-immich cluster & use vectorchord 17.5-0.3.0

--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   # - ./gatus.yaml
   - ./objectstore.yaml
   - ./pg17-cluster.yaml
-  # - ./pg17-immich.yaml
+  - ./pg17-immich.yaml
   - ./prometheusrule.yaml
   - ./scheduledbackup.yaml
   - ./service.yaml
