--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -22,15 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
-          init-db:
-            image:
-              repository: ghcr.io/home-operations/postgres-init
-              tag: 17
-            envFrom: &envFrom
-              - secretRef:
-                  name: *app
           init-config:
-            dependsOn: init-db
             image:
               repository: ghcr.io/home-operations/k8s-sidecar
               tag: 1.30.8@sha256:75fb3721268d85659b16598f65b5a2dd31efb39c2e907bb1c5822bbfe970a9fb
@@ -42,10 +34,10 @@ spec:
               UNIQUE_FILENAMES: true
               METHOD: WATCH
             restartPolicy: Always
-            resources: &resources
+            resources:
               requests:
                 cpu: 10m
-                memory: 128Mi
+                memory: 64Mi
               limits:
                 memory: 128Mi
         containers:
@@ -57,8 +49,7 @@ spec:
               TZ: ${CONFIG_TIMEZONE}
               GATUS_CONFIG_PATH: /config
               GATUS_DELAY_START_SECONDS: 5
-              WEB_PORT: &port 80
-            envFrom: *envFrom
+              GATUS_WEB_PORT: &port 80
             probes:
               liveness: &probes
                 enabled: true
@@ -72,50 +63,32 @@ spec:
                   timeoutSeconds: 1
                   failureThreshold: 3
               readiness: *probes
-            resources: *resources
+            resources:
+              requests:
+                cpu: 100m
+                memory: 128Mi
+              limits:
+                memory: 256Mi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
         serviceAccount:
-          identifier: *app
+          name: *app
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
         runAsUser: &uid 65534
         runAsGroup: *uid
-    rbac:
-      bindings:
-        gatus:
-          type: ClusterRoleBinding
-          roleRef:
-            identifier: *app
-          subjects:
-            - identifier: *app
-      roles:
-        gatus:
-          type: ClusterRole
-          rules:
-            - apiGroups: [""]
-              resources: ["configmaps", "secrets"]
-              verbs: ["get", "watch", "list"]
-    serviceAccount:
-      gatus: {}
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *port
     serviceMonitor:
       app:
-        serviceName: *app
         endpoints:
           - port: http
-            scheme: http
-            path: /metrics
-            interval: 1m
-            scrapeTimeout: 10s
     ingress:
       app:
         className: internal
@@ -137,7 +110,7 @@ spec:
         type: emptyDir
       config-file:
         type: configMap
-        name: gatus-config
+        name: "{{ .Release.Name }}-config"
         globalMounts:
           - path: /config/config.yaml
             subPath: config.yaml
