--- a/kubernetes/apps/storage/minio/app/externalsecret.yaml
+++ b/kubernetes/apps/storage/minio/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name minio
+  name: minio
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: minio-secret
     template:
       data:
         MINIO_ROOT_USER: "{{ .MINIO_ROOT_USER }}"
