--- a/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
@@ -19,7 +19,7 @@ spec:
   values:
     controller:
       podAnnotations:
-        secret.reloader.stakater.com/reload: &secret democratic-csi-nfs
+        secret.reloader.stakater.com/reload: &secret "{{ .Release.Name }}-secret"
       driver:
         image: &image
           registry: ghcr.io/democratic-csi/democratic-csi
