Revert "chore: use .Release.Name where available"
This reverts commit e8caf0cc1ffea635d098f321fbfef258ecee8bd5.

--- a/kubernetes/apps/storage/democratic-csi/nfs/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: democratic-csi-nfs
+  name: &name democratic-csi-nfs
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: democratic-csi-nfs-secret
+    name: *name
     template:
       data:
         driver-config-file.yaml: |
